deployment/what3ver-ai-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: what3ver-ai
spec: {}
status: {}
