deployment/what3ver-ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: what3ver-ai
  name: what3ver-ai
  namespace: what3ver-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: what3ver-ai
  template:
    metadata:
      labels:
        app: what3ver-ai
    spec:
      containers:
      - name: what3ver-ai
        image: 170478954536.dkr.ecr.us-east-2.amazonaws.com/what3ver-ai-backend-dev:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
        ports:
        - containerPort: 8000
