deployment/what3ver-ai-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: what3ver-ai
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    NodePort: 31000
  selector:
    app: what3ver-ai
